compiler/tests/fail/arm-m4/eor_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #EOR(x, 0x0000caca);
    [x] = x;
}
